update on data models

--- a/WebAssetManager/Views/Account/Login.cshtml
+++ b/WebAssetManager/Views/Account/Login.cshtml
@@ -44,10 +44,10 @@
                 <p>
                     @Html.ActionLink("注册为新用户", "Register")
                 </p>
-                @* 在为密码重置功能启用帐户确认后启用此项
-                    <p>
-                        @Html.ActionLink("忘记了密码?", "ForgotPassword")
-                    </p>*@
+                @* 在为密码重置功能启用帐户确认后启用此项*@
+                <p>
+                    @Html.ActionLink("忘记了密码?", "ForgotPassword")
+                </p>
             }
         </section>
     </div>
