--- a/WebAssetManager/Views/Dashboard/Index.cshtml
+++ b/WebAssetManager/Views/Dashboard/Index.cshtml
@@ -6,3 +6,42 @@
 
 <h2>Index</h2>
 
+<p>Watchlist</p>
+<ul>
+    <li>Some stock</li>
+    <li>stock</li>
+    <li>bitcoin</li>
+</ul>
+
+
+<p>Current Asset</p>
+<ul>
+    <li>pingan</li>
+    <li>haitong</li>
+    <li>yongjinbao</li>
+    <li>蛋卷</li>
+    <li>robinhood</li>
+    <li>现金宝</li>
+    <li>现金宝</li>
+    <li>us bank account</li>
+    <li>us bank account2</li>
+    <li>Bitcoin wallet</li>
+    <li>ETH wallet</li>
+</ul>
+
+
+<p>Investment Strategy</p>
+<ul>
+    <li>joinquant</li>
+    <li>wencai</li>
+    <li>guoren</li>
+</ul>
+
+
+<p>Info source</p>
+<ul>
+    <li>热搜排行</li>
+    <li>雪球关注数增长率</li>
+</ul>
+
+<p>Apply indicator on  watchlist</p>
