update on base models and db schema update

--- a/WebAssetManager/Views/Manage/Index.cshtml
+++ b/WebAssetManager/Views/Manage/Index.cshtml
@@ -10,6 +10,11 @@
     <h4>更改你的帐户设置</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>姓名:</dt>
+        <dd>
+            @Model.Name
+        </dd>
+
         <dt>密码:</dt>
         <dd>
             [
