--- a/WebAssetManager/Views/Shared/_Layout.cshtml
+++ b/WebAssetManager/Views/Shared/_Layout.cshtml
@@ -22,9 +22,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
+                    <li>@Html.ActionLink("Portfolios", "Index", "Portfolios")</li>
+                    <li>@Html.ActionLink("Accounts", "Index", "InvestmentAccounts")</li>
+                    <li>@Html.ActionLink("Positions", "Index", "Positions")</li>
+                    <li>@Html.ActionLink("Strategies", "Index", "Strategies")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
