completed base model calculation

--- a/WebAssetManager/Views/Investments/Delete.cshtml
+++ b/WebAssetManager/Views/Investments/Delete.cshtml
@@ -45,6 +45,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Currency)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Currency)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.WebUrl)
         </dt>
 
