--- a/WebAssetManager/Views/Positions/Details.cshtml
+++ b/WebAssetManager/Views/Positions/Details.cshtml
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Strategy.Name)
+            Strategy Name
         </dt>
 
         <dd>
