--- a/WebAssetManager/Views/Shared/_Layout.cshtml
+++ b/WebAssetManager/Views/Shared/_Layout.cshtml
@@ -24,10 +24,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Portfolios", "Index", "Portfolios")</li>
-                    <li>@Html.ActionLink("Accounts", "Index", "InvestmentAccounts")</li>
+                    <li>@Html.ActionLink("Accounts", "Index", "Investments")</li>
                     <li>@Html.ActionLink("Positions", "Index", "Positions")</li>
                     <li>@Html.ActionLink("Strategies", "Index", "Strategies")</li>
-
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
