--- a/WebAssetManager/Views/Strategies/Delete.cshtml
+++ b/WebAssetManager/Views/Strategies/Delete.cshtml
@@ -29,6 +29,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Source)
         </dt>
 
