--- a/WebAssetManager/Views/Strategies/Details.cshtml
+++ b/WebAssetManager/Views/Strategies/Details.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Source)
         </dt>
 
@@ -57,6 +65,29 @@
 
         <dd>
             @Html.DisplayFor(model => model.Password)
+        </dd>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Stock Name</th>
+                    <th>Current Price</th>
+                    <th>Current Gain</th>
+                </tr>
+                @foreach (var i in Model.Positions)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => i.StockName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => i.CurrentPrice)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => i.CurrentGain)
+                        </td>
+                    </tr>
+                }
+            </table>
         </dd>
 
     </dl>
