--- a/WebAssetManager/Views/Strategies/Index.cshtml
+++ b/WebAssetManager/Views/Strategies/Index.cshtml
@@ -19,6 +19,9 @@
             @Html.DisplayNameFor(model => model.Url)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Source)
         </th>
         <th>
@@ -40,6 +43,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Url)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Source)
