--- a/WebAssetManager/Views/Positions/Index.cshtml
+++ b/WebAssetManager/Views/Positions/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Account.PortfolioId)
+            Account
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Strategy.Name)
@@ -25,25 +25,26 @@
             @Html.DisplayNameFor(model => model.Symbol)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.HoldingAmount)
+            Holding
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SellableAmount)
+            Sellable
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CostPrice)
+            Cost Price
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CurrentGain)
+            Current Price
+        </th>
+
+        <th>
+            Current Gain
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.GainPercent)
+            Gain Percentage
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TotalValue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CurrentPrice)
+            Total Value
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FundNumber)
@@ -54,7 +55,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Account.PortfolioId)
+            @Html.DisplayFor(modelItem => item.Account.AccountName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Strategy.Name)
@@ -75,6 +76,10 @@
             @Html.DisplayFor(modelItem => item.CostPrice)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.CurrentPrice)
+        </td>
+
+        <td>
             @Html.DisplayFor(modelItem => item.CurrentGain)
         </td>
         <td>
@@ -82,9 +87,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TotalValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CurrentPrice)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FundNumber)
