--- a/WebAssetManager/Views/Strategies/Details.cshtml
+++ b/WebAssetManager/Views/Strategies/Details.cshtml
@@ -51,21 +51,26 @@
             @Html.DisplayFor(model => model.RequireLogin)
         </dd>
 
+        @*<dt>
+        @Html.DisplayNameFor(model => model.LoginUserName)
+    </dt>
+
+    <dd>
+        @Html.DisplayFor(model => model.LoginUserName)
+    </dd>
+
+    <dt>
+        @Html.DisplayNameFor(model => model.Password)
+    </dt>
+
+    <dd>
+        @Html.DisplayFor(model => model.Password)
+    </dd>*@
+
         <dt>
-            @Html.DisplayNameFor(model => model.LoginUserName)
+            Positions
         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LoginUserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Password)
-        </dd>
         <dd>
             <table class="table">
                 <tr>
