--- a/WebAssetManager/Views/Shared/_Layout.cshtml
+++ b/WebAssetManager/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                     <li>@Html.ActionLink("Accounts", "Index", "Investments")</li>
                     <li>@Html.ActionLink("Positions", "Index", "Positions")</li>
                     <li>@Html.ActionLink("Strategies", "Index", "Strategies")</li>
+                    <li>@Html.ActionLink("WatchList", "Index", "WatchLists")</li>
+                    <li>@Html.ActionLink("Allocation", "Index", "Allocations")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
