--- a/WebAssetManager/Views/Investments/Edit.cshtml
+++ b/WebAssetManager/Views/Investments/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PortfolioId, "PortfolioId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PortfolioId, "Portfolio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("PortfolioId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PortfolioId, "", new { @class = "text-danger" })
@@ -62,14 +62,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.WebUrl, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.WebUrl, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Returns, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Returns, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Returns, "", new { @class = "text-danger" })
             </div>
         </div>
 
