--- a/WebAssetManager/Views/Positions/Delete.cshtml
+++ b/WebAssetManager/Views/Positions/Delete.cshtml
@@ -13,11 +13,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Account.PortfolioId)
+            @Html.DisplayNameFor(model => model.Account.AccountName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.PortfolioId)
+            @Html.DisplayFor(model => model.Account.AccountName)
         </dd>
 
         <dt>
@@ -45,6 +45,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.HoldingAmount)
         </dt>
 
@@ -69,35 +77,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CurrentGain)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CurrentGain)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GainPercent)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GainPercent)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalValue)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalValue)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.CurrentPrice)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.CurrentPrice)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Weight)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Weight)
         </dd>
 
         <dt>
