--- a/WebAssetManager/Views/Positions/Details.cshtml
+++ b/WebAssetManager/Views/Positions/Details.cshtml
@@ -12,15 +12,15 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Account.PortfolioId)
+            @Html.DisplayNameFor(model => model.Account.AccountName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.PortfolioId)
+            @Html.DisplayFor(model => model.Account.AccountName)
         </dd>
 
         <dt>
-            Strategy Name
+            @Html.DisplayNameFor(model => model.Strategy.Name)
         </dt>
 
         <dd>
@@ -41,6 +41,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Symbol)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
@@ -68,35 +76,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CurrentGain)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CurrentGain)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GainPercent)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GainPercent)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalValue)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalValue)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.CurrentPrice)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.CurrentPrice)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Weight)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Weight)
         </dd>
 
         <dt>
