--- a/WebAssetManager/Views/WatchLists/Details.cshtml
+++ b/WebAssetManager/Views/WatchLists/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Account.PortfolioId)
+            @Html.DisplayNameFor(model => model.Account.AccountName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.PortfolioId)
+            @Html.DisplayFor(model => model.Account.AccountName)
         </dd>
 
         <dt>
