--- a/WebAssetManager/Views/Account/Register.cshtml
+++ b/WebAssetManager/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title。</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@*@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>创建新帐户。</h4>
@@ -41,7 +41,7 @@
             <input type="submit" class="btn btn-default" value="注册" />
         </div>
     </div>
-}
+}*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
