add redis client for trade order subscription

--- a/WebAssetManager/Views/Strategies/Edit.cshtml
+++ b/WebAssetManager/Views/Strategies/Edit.cshtml
@@ -16,6 +16,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.StrategyId)
+        @Html.HiddenFor(model => model.UserId)
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
