--- a/WebAssetManager/Views/Investments/Edit.cshtml
+++ b/WebAssetManager/Views/Investments/Edit.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-
+        @Html.HiddenFor(model => model.UserId)
         <div class="form-group">
             @Html.LabelFor(model => model.PortfolioId, "Portfolio", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
